# LTRANS_Zlev

./: .gitignore  LICENSE  LTRANS_Zlev_user_manual.md  README.md  meson.build  meson_options.txt
LTRANS_src/: LTRANS.f90  LTRANS.h  VAR_IDs.h  behavior_module.f90  boundary_module.f90  conversion_module.f90  gridcell_module.f90  hor_turb_module.f90  hydrodynamic_module.f90  interpolation_module.f90  makefile  norm_module.f90  oil_module_Zlev.f90  parameter_module.f90  point_in_polygon_module.f90  random_module.f90  readme.txt  settlement_module.f90  stokes_drift_module.f90  stranding_module.f90  tension_module.f90  ver_turb_module.f90
MITgcm_pretreatment_scripts/: LTRANS_model_file.data  pre-treat_MITgcm_output_files.py  tools_module.py
SIM/: LTRANS_input_file_example.data
SIM/input/: Iniparloc_example.csv  Iniparloc_vertical_vel_file_example.csv  readme.md  vertical_vel_file_example.txt  vvel_6parts.txt
SIM/tests/: LTRANS_Slevels_Cur-endfile.ref  LTRANS_Slevels_Cur.data  LTRANS_Slevels_CurWin-endfile.ref  LTRANS_Slevels_CurWin.data  LTRANS_Slevels_CurWinStk-endfile.ref  LTRANS_Slevels_CurWinStk.data  LTRANS_Slevels_CurWin_B998.data  LTRANS_Slevels_CurWin_StkRead.data  LTRANS_Slevels_CurWin_StkRead_B998.data  LTRANS_Slevels_CurWin_StkfromWind.data  LTRANS_Slevels_CurWin_StkfromWind_B998.data  LTRANS_Slevels_Cur_B998.data  LTRANS_Slevels_Cur_Refloat.data  LTRANS_Slevels_Cur_StkRead.data  LTRANS_Slevels_Cur_Str1.data  LTRANS_Slevels_Cur_Str2.data  LTRANS_Slevels_Cur_Str3.data  LTRANS_Slevels_Cur_Str4.data  LTRANS_Slevels_StkRead.data  LTRANS_Slevels_StkRead_B998.data  LTRANS_Slevels_Win-endfile.ref  LTRANS_Slevels_Win.data  LTRANS_Slevels_Win_StkRead.data  LTRANS_Slevels_Win_StkfromWind.data  LTRANS_Zlevels_Cur-endfile.ref  LTRANS_Zlevels_Cur.data  LTRANS_Zlevels_CurWin-endfile.ref  LTRANS_Zlevels_CurWin.data  LTRANS_Zlevels_CurWinStk-endfile.ref  LTRANS_Zlevels_CurWinStk.data  LTRANS_Zlevels_CurWin_B998.data  LTRANS_Zlevels_CurWin_StkRead.data  LTRANS_Zlevels_CurWin_StkRead_B998.data  LTRANS_Zlevels_CurWin_StkfromWind.data  LTRANS_Zlevels_CurWin_StkfromWind_B998.data  LTRANS_Zlevels_Cur_B998.data  LTRANS_Zlevels_Cur_Refloat.data  LTRANS_Zlevels_Cur_StkRead.data  LTRANS_Zlevels_Cur_Str1.data  LTRANS_Zlevels_Cur_Str2.data  (+20 more)
SIM/tests/LTRANS_v2b/: LTRANS_Slevels_Cur_v2b-endfile.csv  LTRANS_Slevels_Cur_v2b.data
SIM/tests/solutions/: LTRANS_Slevels_Cur-endfile.csv  LTRANS_Slevels_CurWin-endfile.csv  LTRANS_Slevels_CurWin_B998-endfile.csv  LTRANS_Slevels_CurWin_StkRead-endfile.csv  LTRANS_Slevels_CurWin_StkRead_B998-endfile.csv  LTRANS_Slevels_CurWin_StkfromWind-endfile.csv  LTRANS_Slevels_CurWin_StkfromWind_B998-endfile.csv  LTRANS_Slevels_Cur_B998-endfile.csv  LTRANS_Slevels_Cur_Refloat-endfile.csv  LTRANS_Slevels_Cur_StkRead-endfile.csv  LTRANS_Slevels_Cur_Str1-endfile.csv  LTRANS_Slevels_Cur_Str2-endfile.csv  LTRANS_Slevels_Cur_Str3-endfile.csv  LTRANS_Slevels_Cur_Str4-endfile.csv  LTRANS_Slevels_StkRead-endfile.csv  LTRANS_Slevels_StkRead_B998-endfile.csv  LTRANS_Slevels_Win-endfile.csv  LTRANS_Slevels_Win_StkRead-endfile.csv  LTRANS_Slevels_Win_StkfromWind-endfile.csv  LTRANS_Zlevels_Cur-endfile.csv  LTRANS_Zlevels_CurWin-endfile.csv  LTRANS_Zlevels_CurWin_B998-endfile.csv  LTRANS_Zlevels_CurWin_StkRead-endfile.csv  LTRANS_Zlevels_CurWin_StkRead_B998-endfile.csv  LTRANS_Zlevels_CurWin_StkfromWind-endfile.csv  LTRANS_Zlevels_CurWin_StkfromWind_B998-endfile.csv  LTRANS_Zlevels_Cur_B998-endfile.csv  LTRANS_Zlevels_Cur_Refloat-endfile.csv  LTRANS_Zlevels_Cur_StkRead-endfile.csv  LTRANS_Zlevels_Cur_Str1-endfile.csv  LTRANS_Zlevels_Cur_Str2-endfile.csv  LTRANS_Zlevels_Cur_Str3-endfile.csv  LTRANS_Zlevels_Cur_Str4-endfile.csv  LTRANS_Zlevels_StkRead-endfile.csv  LTRANS_Zlevels_StkRead_B998-endfile.csv  LTRANS_Zlevels_Win-endfile.csv  LTRANS_Zlevels_Win_StkRead-endfile.csv  LTRANS_Zlevels_Win_StkfromWind-endfile.csv
